# vapor-notes

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/commands/: tauriCommands.ts
src/components/Editor/: Editor.css  Editor.tsx  FormattingToolbar.css  FormattingToolbar.tsx  StatusBar.css  StatusBar.tsx  blizzardTheme.ts  cyberpunkTheme.ts  formattingCommands.ts  halloweenTheme.ts  hideMarkdown.ts  imagePlugin.ts  linkPlugin.ts  listIndentPlugin.ts  matrixTheme.ts  miamiTheme.ts  solarTheme.ts  summerNightsTheme.ts  vaporwaveTheme.ts
src/components/EmptyState/: EmptyState.css  EmptyState.tsx
src/components/PasswordGate/: PasswordGate.css  PasswordGate.tsx
src/components/Sidebar/: FileItem.css  FileItem.tsx  FileTree.css  FileTree.tsx  LockButton.css  LockButton.tsx  NewNoteButton.css  NewNoteButton.tsx  SearchBar.css  SearchBar.tsx  Sidebar.css  Sidebar.tsx  ThemeModal.css  ThemeModal.tsx
src/context/: NotesContext.tsx  ThemeContext.tsx
src/theme/: colors.ts  globals.css
