[package]
name = "vapor-notes"
version = "0.1.0"
description = "A vaporwave-themed note-taking app"
authors = ["you"]
edition = "2021"

[lib]
name = "vapor_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
